--- a/ticket_booking/requirements.txt
+++ b/ticket_booking/requirements.txt
@@ -1,4 +1,6 @@
 amqp==5.3.1
+annotated-types==0.7.0
+anyio==4.11.0
 APScheduler==3.11.1
 asgiref==3.8.1
 attrs==25.3.0
@@ -11,6 +13,7 @@ cffi==1.17.1
 channels==4.2.2
 channels_redis==4.2.1
 charset-normalizer==3.4.4
+chroma-hnswlib==0.7.6
 click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
@@ -28,18 +31,26 @@ django-cors-headers==4.4.0
 django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
+distro==1.9.0
+h11==0.16.0
 hyperlink==21.0.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 incremental==24.7.2
+jiter==0.12.0
 kombu==5.5.2
 msgpack==1.1.0
 numpy==2.3.4
+openai==2.8.1
 pandas==2.3.3
 pillow==10.4.0
 prompt_toolkit==3.0.50
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
+pydantic==2.12.4
+pydantic-core==2.41.5
 PyJWT==2.9.0
 PyMySQL==1.1.1
 pyOpenSSL==25.0.0
@@ -53,14 +64,23 @@ rest-framework-simplejwt==0.0.2
 service-identity==24.2.0
 setuptools==80.9.0
 six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
+tqdm==4.67.1
 tomli==2.2.1
 Twisted==24.11.0
 txaio==23.1.1
-typing_extensions==4.13.1
+typing-extensions==4.15.0
+typing-inspection==0.4.2
 tzdata==2025.2
 tzlocal==5.3.1
 urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.13
 zope.interface==7.2
+chromadb>=0.4.0
+langchain>=0.1.0
+langchain-chroma>=0.1.0
+langchain-community>=0.0.1
+langchain-huggingface>=0.0.1
+sentence-transformers>=2.2.0
