--- a/ticket_booking/requirements.txt
+++ b/ticket_booking/requirements.txt
@@ -41,7 +41,7 @@ incremental==24.7.2
 jiter==0.12.0
 kombu==5.5.2
 msgpack==1.1.0
-numpy==2.3.4
+# numpy==2.3.4
 openai==2.8.1
 pandas==2.3.3
 pillow==10.4.0
